# warp-fusion

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: build-and-test.yml  release.yml
_gal/: ver.gxl  vfm.gxl
crates/init_tpl/: Cargo.toml
crates/init_tpl/src/: lib.rs  scope.rs  templates.rs
crates/wf-project-remote/src/: lib.rs  test_support.rs  tests.rs
crates/wf-source-api/: Cargo.toml
crates/wf-source-api/src/: lib.rs
crates/wfadm/: Cargo.toml
crates/wfadm/src/: check.rs  conf.rs  (+7 more)
crates/wfgen/: Cargo.toml
crates/wfl/: Cargo.toml
crates/wfusion/: Cargo.toml
docker/: Dockerfile
docker/default_setting/: test_run.sh
docs/: admin_api.md  cli.md  configuration.md  getting-started.md  monitoring-design.md  rules.md  schema.md
docs/config/: metrics.md  sink.md  source.md
docs/design/: admin_api_alignment.md  admin_api_reload_design.md  project_remote_alignment.md  wfadm.md  wfg-design.md
examples/: README.md
examples/close_demo/: wfusion.toml
examples/port_scan_whitelist/: README.md  knowdb.toml  wfusion.toml  wfusion.toml.bak
examples/rat_propagation/: README.md  wfusion.toml
examples/sqli_probe/: README.md  wfusion.toml
examples/ssh_brute_force/: README.md  wfusion.toml
examples/weak_password2/: README.md  run.sh  wfusion.toml
examples/wp-pipeline/: deps-check.sh
moju/draft/: architecture.mju  dataflow.mju  extraction.meta.json  moju-layout.json  review.md
skills/: data-governance.md  wf-config-guide.md  wfl-guide.md  wfs-guide.md
updates/stable/: manifest.json
(+133 files in other folders)
