[workspace]
members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
default-members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
winnow = "1.0"
orion-error = { version = "0.8.1", features = ["derive", "serde_json", "toml", "tracing"] }

wf-engine = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.6" }
wf-config = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.6" }
wf-lang = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.6" }
wf-runtime = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.6" }

#wf-engine = { path = "../wp-reactor/crates/wf-engine" }
#wf-config = { path = "../wp-reactor/crates/wf-config" }
#wf-lang = { path = "../wp-reactor/crates/wf-lang" }
#wf-runtime = { path = "../wp-reactor/crates/wf-runtime" }
